--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-standard": "^16.0.3",
     "nodemon": "^2.0.7"
   }
 }
